--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 buildscript {
+    ext {
+        kotlinVersion = '1.1.2-3'
+    }
+
     repositories {
         mavenLocal()
         mavenCentral()
@@ -8,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'org.multi-os-engine:moe-gradle:1.3.6'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -69,11 +74,12 @@ project(":android") {
 
 project(":core") {
     apply plugin: "java"
-
+    apply plugin: "kotlin"
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     }
 }
 
