Add saving file ability to keep track of player's progress
It utilizes
- Data class
- Interface for better architecture design and code maintainance
- Strictly no singleton pattern in use to add this support
  (PlayerSaveFileManager lives under Game class which all GameState
  class has access to)
- Marked method as throwable properly via @Throws
- Create a custom Exception class to return exception with code field to
  differentiate between errors

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,7 @@ Thumbs.db
 !/ios-moe/xcode/*.xcodeproj/xcshareddata
 !/ios-moe/xcode/*.xcodeproj/project.pbxproj
 /ios-moe/xcode/native/
+
+## player's save file
+# ignore it to avoid problem of unintentional release player's save file in production
+android/assets/player.json
